app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duniversity
  namespace: praveen-ns 
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: duni 
  template:
    metadata:
      labels:
        app: duni 
      spec:
        containers:
          - name: duni-container
            image: praveenx03/duniversity:v1.1.0
            resources:
              requests:
                memory: "128Mi"
                cpu: "100m"
              limits:
                memory: "256Mi"
                cpu: "200m"
            ports:
              - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: duni-service 
  namespace: praveen-ns
spec:
  selctor:
    app: duni
  ports:
  - port: 3001
    targetPort: 3000
  type: NodePort
