mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy 
  namespace: praveen-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-container 
        image: mysql
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql 
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: duni-pvc
---
apiVersion: v1
kind: Service
metadata: 
  name: mysql-service
  namespace: praveen-ns
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
